force-app/main/default/objects/Learning_Center__c/Learning_Center__c.object-meta.xml
<CustomObject>
    <label>Learning Center</label>
    <nameField>
        <label>Learning Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Center</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>