force-app/main/default/objects/Learning_Center__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics (Wave)</fullName>
            </value>
            <value>
                <fullName>Tricks and Tips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>