force-app/main/default/objects/Learning_Center__c/fields/Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Descriptions__c</fullName>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>