force-app/main/default/objects/Learning_Center__c/fields/Help_URL__c.field-meta.xml
<CustomField>
    <fullName>Help_URL__c</fullName>
    <description>Url to view External help</description>
    <label>Help URL</label>
    <type>Url</type>
</CustomField>