force-app/main/default/objects/Learning_Center__c/fields/Portal_Help__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help__c</fullName>
    <description>the cloud experience that the help page is tied to</description>
    <label>Portal Help</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal Admin</fullName>
            </value>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>