force-app/main/default/objects/Learning_Center__c/fields/YouTube_URL__c.field-meta.xml
<CustomField>
    <fullName>YouTube_URL__c</fullName>
    <label>YouTube URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>