force-app/main/default/objects/Learning_Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesForce_Object__c</columns>
    <columns>Descriptions__c</columns>
    <columns>Help_URL__c</columns>
    <columns>YouTube_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>